# bitgen

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
bitgen/: Cargo.toml
bitgen/src/: bit_num.rs  bit_type.rs  bit_wrapper.rs  lib.rs  magic.rs
bitgen/src/bit_num/: mod.rs  signed.rs  unsigned.rs
bitgen/src/bit_wrapper/: access.rs  access_dyn.rs  accessors.rs  maybe.rs  maybe_dyn.rs  predicate.rs  tuple_access.rs
bitgen/src/containers/: bit.rs  bit_vec.rs  mod.rs  raw_vec.rs
bitgen_derive/: Cargo.toml
bitgen_derive/src/: lib.rs
bitgen_test/: Cargo.toml
bitgen_test/src/: lib.rs  main.rs
