[package]
name = "bitgen"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"
authors = ["Isse <isidornie@gmail.com>"]
description = "A package to easily create bit fields"
repository = "https://github.com/IsseW/bitgen.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.6"
num-traits = "0.2.14"
bitgen_derive = { path = "../bitgen_derive", optional = true }
wyz = "0.5.0"
const-fnv1a-hash = "1.0.1"

[features]
default = ["derive"]
derive = ["bitgen_derive"]