[package]
name = "bitgen_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bitgen_derive"
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
uuid = {version = "0.8.2", features = ["v4"]}